--- a/Tserenchimed biydaalt Website/public/static/wstyle.css
+++ b/Tserenchimed biydaalt Website/public/static/wstyle.css
@@ -13,7 +13,7 @@
 body {
   display: flex;
   align-items: center;
-  background-image: url("public/images/home-img.jpg");
+  background-image: url("/public/images/home-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right;
